chore(Service): 아이템 조회시 불변 리스트 리턴하도록 수정